fixed project icon size on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -121,6 +121,8 @@ header {
     margin-top: -3px;
 
     img {
+      width: 50px;
+      height: auto;
       padding-top: 30px;
 
       &:not(:nth-of-type(4)) {
@@ -169,6 +171,7 @@ div[id^="fl-"] {
   font-size: 2.3em;
   width: 45px;
   height: 45px;
+  border-radius: 0 8px 0 0;
   background-color: rgba(180,40,90,.2);
   color: $off-white;
   text-shadow: 0px 0px 3px $dark-purp;
@@ -475,11 +478,6 @@ div[id^="fl-"] {
       margin-top: -18px;
       float: right;
 
-      img {
-        width: 50px;
-        height: auto;
-      }
-
       img:not(:nth-of-type(4)) {
         margin-right: 8px;
       }
@@ -487,7 +485,6 @@ div[id^="fl-"] {
   }
 
   .featherlight-close-icon.featherlight-close {
-    border-radius: 0 8px 0 0;
     right: 25px;
     top: 25px;
   }
